--- a/homework/Vladislav Urbanski/FinalProjectJavaOne/src/main/resources/application.properties
+++ b/homework/Vladislav Urbanski/FinalProjectJavaOne/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/product_db?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
-spring.datasource.username=vladis1350
-spring.datasource.password=010203vv
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost/product_db?useUnicode=true&serverTimezone=UTC&useSSL=true&verifyServerCertificate=false
+#spring.datasource.username=vladis1350
+#spring.datasource.password=010203vv
 
